<resources>
    <string name="app_name">My Dinner</string>

    <!-- Universal -->
    <string name="request_error">An error occurred</string>

    <!-- Login/signup screen -->
    <string name="username_input_hint">username</string>
    <string name="password_input_hint">password</string>
    <string name="password_input_repeat_hint">repeat password</string>
    <string name="password_are_not_equal_message">Error: passwords are not equal</string>
    <string name="log_in_button_text">Log in</string>
    <string name="log_in_success_message">You have successfully logged in</string>
    <string name="log_in_failure_http_409">User doesn’t exist or password is incorrect</string>
    <string name="login_background_image_description">Login background</string>
    <string name="register_view_text"><u>Don\'t already have account? Click here to create one!</u></string>
    <string name="sign_up_text">Sign up!</string>
    <string name="signup_message_success">Account has been created successfully</string>
    <string name="signup_message_failure">An error occurred</string>

    <!-- Create Recipe -->
    <string name="recipe_name_label">Recipe name</string>
    <string name="recipe_details_label">Recipe description</string>
    <string name="recipe_create_button_text">Create Recipe</string>
    <string name="recipe_create_message_success">Recipe created successfully</string>
    <string name="recipe_create_message_failure">An error occurred</string>
    <string name="ingredient_amount_is_empty_message">Please fill the amount</string>

    <!-- Recipe List View -->
    <string name="recipe_get_all_failure">An error occurred while fetching recipes</string>

    <!-- Ingredient -->
    <string name="ingredient_name_label">Ingredient name</string>
    <string name="ingredient_name_input_hint">Ingredient</string>
    <string name="ingredient_measure_label">Ingredient measure</string>
    <string name="ingredient_amount_label">Ingredient amount</string>
    <string name="ingredient_amount_input_default">0</string>
    <string name="ingredient_add_button_text">Add ingredient</string>

</resources>
