<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recipe.CreateRecipeActivity">

    <LinearLayout
        android:id="@+id/recipe_create_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/recipe_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe_name_label" />

        <EditText
            android:id="@+id/recipe_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/recipe_name_label"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/recipe_details_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe_details_label" />

        <EditText
            android:id="@+id/recipe_details_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/recipe_details_label"
            android:importantForAutofill="no"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/recipe_create_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCreateRecipeButtonClick"
            android:text="@string/recipe_create_button_text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ingredient_add_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_create_container">

        <TextView
            android:id="@+id/ingredient_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingredient_name_label" />

        <AutoCompleteTextView
            android:id="@+id/ingredient_name_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/ingredient_name_input_hint" />

        <TextView
            android:id="@+id/ingredient_measure_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingredient_measure_label" />

        <Spinner
            android:id="@+id/ingredient_measure_input"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:entries="@android:array/emailAddressTypes" />

        <TextView
            android:id="@+id/ingredient_amount_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingredient_amount_label" />

        <EditText
            android:id="@+id/ingredient_amount_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ingredient_amount_label"
            android:importantForAutofill="no"
            android:inputType="numberSigned"
            android:text="@string/ingredient_amount_input_default" />

        <Button
            android:id="@+id/ingredient_add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onAddIngredientButtonClick"
            android:text="@string/ingredient_add_button_text" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/added_ingredients_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredient_add_container">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/added_ingredients_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>